--- a/SpotifyTree/SpotifyTree/appsettings.json
+++ b/SpotifyTree/SpotifyTree/appsettings.json
@@ -4,5 +4,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ClientId": "56fe9ecd118c4d5699bc17e3bc7b4350",
+  "ClientSecret": "8cef3776f2ff4daa94ba0de3300e0c3d"
 }
