add some validation and functionality for getting multiple artists with one request

--- a/SpotifyTree/SpotifyTree.Domain/SpotifyTree.Domain.csproj
+++ b/SpotifyTree/SpotifyTree.Domain/SpotifyTree.Domain.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG;NETCOREAPP2_0</DefineConstants>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="SpotifyAPI.Web" Version="4.0.0" />
     <PackageReference Include="SpotifyAPI.Web.Auth" Version="4.0.0" />
